--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -95,9 +95,9 @@
   color: @special-dark-grey;
 }
 
-.form-font() {
+.form-font(@font-size: 16px; @line-height: 18px) {
   font-family: @decor-font;
-  font-size: 16px;
-  line-height: 18px;
+  font-size: @font-size;
+  line-height: @line-height;
   text-transform: uppercase;
 }
