--- a/source/less/blocks/form/form-main.less
+++ b/source/less/blocks/form/form-main.less
@@ -2,11 +2,37 @@
   .heading(36px; 36px; @basic-black);
   .wrapper;
   margin-bottom: 37px;
+
+  @media (min-width: @tablet-width) {
+    .heading(60px; 60px; @basic-black);
+    padding-left: 70px;
+    padding-right: 66px;
+    margin-top: 64px;
+    margin-bottom: 54px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 0 110px;
+    margin-top: 89px;
+    margin-bottom: 56px;
+  }
 }
 
 .form-main__text {
   .heading(14px; 18px; @basic-black);
   .wrapper;
-  padding-right: 74px;
   text-transform: uppercase;
+
+  @media (min-width: @tablet-width) {
+    .heading(20px; 30px; @basic-black);
+    margin-bottom: 66px;
+    padding-left: 70px;
+    padding-right: 66px;
+    text-align: left;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 0 110px;
+    margin-bottom: 66px;
+  }
 }
