--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -10,7 +10,7 @@
 @special-grey: #cdcdcd;
 @grey-icon: #666666;
 @grey-border: #e6e6e6;
-@grey-border-input: #e7e7e7;
+@grey-border-input: #160b0b;
 @hover-grey-border: #bababa;
 @grey-plus: #d3d3d3;
 @green: #68b738;
