заменила проценты на px, заменила миксины, исправила по замечаниям сетки каталога и формы

--- a/source/less/blocks/catalog/catalog-main.less
+++ b/source/less/blocks/catalog/catalog-main.less
@@ -1,10 +1,10 @@
 .catalog-main__heading {
-  .heading(36px; 36px; @basic-black);
+  .heading(36px; 36px);
   .wrapper;
   margin-bottom: 49px;
 
   @media (min-width: @tablet-width) {
-    .heading(60px; 60px; @basic-black);
+    .heading(60px; 60px);
     margin-top: 60px;
     margin-bottom: 83px;
   }
