--- a/source/less/blocks/form/form-main.less
+++ b/source/less/blocks/form/form-main.less
@@ -1,10 +1,10 @@
 .form-main__heading {
-  .heading(36px; 36px; @basic-black);
+  .heading(36px; 36px);
   .wrapper;
   margin-bottom: 37px;
 
   @media (min-width: @tablet-width) {
-    .heading(60px; 60px; @basic-black);
+    .heading(60px; 60px);
     padding-left: 70px;
     padding-right: 66px;
     margin-top: 64px;
@@ -19,12 +19,12 @@
 }
 
 .form-main__text {
-  .heading(14px; 18px; @basic-black);
+  .heading(14px; 18px);
   .wrapper;
   text-transform: uppercase;
 
   @media (min-width: @tablet-width) {
-    .heading(20px; 30px; @basic-black);
+    .heading(20px; 30px);
     margin-bottom: 66px;
     padding-left: 70px;
     padding-right: 66px;
