--- a/source/less/blocks/general/copyright.less
+++ b/source/less/blocks/general/copyright.less
@@ -1,5 +1,6 @@
 .copyright__link {
-  .description(16px; auto; @special-dark-grey);
+  font-size: 16px;
+  color: @special-dark-grey;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
