--- a/source/less/blocks/general/site-list.less
+++ b/source/less/blocks/general/site-list.less
@@ -47,7 +47,7 @@
   }
 }
 
-.site-list__item-casual a {
+.site-list__item--casual a {
   @media (min-width: @desktop-width) {
     color: @black-text;
   }
