--- a/source/less/blocks/index/details.less
+++ b/source/less/blocks/index/details.less
@@ -3,10 +3,10 @@
 }
 
 .details__heading {
-  .heading(36px; 40px; @basic-black);
+  .heading(36px; 40px);
 
   @media (min-width: @tablet-width) {
-    .heading(60px; 60px; @basic-black);
+    .heading(60px; 60px);
     margin-bottom: 0;
   }
 }
@@ -25,7 +25,6 @@
 }
 
 .details__item {
-  .description(14px; 18px; @special-dark-grey);
   position: relative;
   display: flex;
   align-items: center;
@@ -44,7 +43,6 @@
   }
 
   @media (min-width: @tablet-width) {
-    .description(16px; 24px; @special-dark-grey);
     flex-direction: column;
     padding-top: 160px;
     padding-left: 0;
