--- a/source/less/blocks/index/example.less
+++ b/source/less/blocks/index/example.less
@@ -14,11 +14,11 @@
 }
 
 .example__title {
-  .heading(36px; 40px; @basic-black);
+  .heading(36px; 40px);
   padding-top: 27px;
 
   @media (min-width: @tablet-width) {
-    .heading(60px; 60px; @basic-black);
+    .heading(60px; 60px);
   }
 }
 
@@ -59,12 +59,10 @@
 }
 
 .example__description {
-  .description(14px; 18px; @special-dark-grey);
   margin-bottom: 25px;
   width: 279px;
 
   @media (min-width: @tablet-width) {
-    .description(16px; 24px; @special-dark-grey);
     width: 700px;
     margin-bottom: 54px;
   }
