--- a/source/less/blocks/index/page-main.less
+++ b/source/less/blocks/index/page-main.less
@@ -13,12 +13,13 @@
 }
 
 .page-main__title {
-  .heading(36px; 36px; @basic-white);
+  .heading(36px; 36px);
+  color: @basic-white;
   width: 249px;
   margin: 0 auto 25px;
 
   @media (min-width: @tablet-width) {
-    .heading(60px; 60px; @basic-black);
+    .heading(60px; 60px);
     width: 414px;
     margin-bottom: 41px;
     margin-left: 117px;
@@ -32,13 +33,14 @@
 }
 
 .page-main__slogan {
-  .heading(14px; 14px; @basic-white);
+  .heading(14px; 14px);
+  color: @basic-white;
   text-transform: uppercase;
   width: 198px;
   margin: 0 auto 29px;
 
   @media (min-width: @tablet-width) {
-    .heading(20px; 20px; @basic-black);
+    .heading(20px; 20px);
     width: 283px;
     margin-bottom: 0;
     margin-left: 117px;
