--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -16,9 +16,15 @@ body {
   padding: 0;
   font-family: @base-font;
   font-size: 14px;
+  line-height: 18px;
   font-weight: 400;
   color: @special-dark-grey;
   background-color: @basic-white;
+
+  @media (min-width: @tablet-width) {
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
 
 img {
