--- a/source/less/blocks/index/programs.less
+++ b/source/less/blocks/index/programs.less
@@ -1,8 +1,3 @@
-.programs {
-  .heading(16px; 16px; @basic-black);
-  .uppercase-text;
-}
-
 .programs__button {
   .button(14px);
   line-height: 18px;
@@ -60,7 +55,8 @@
 }
 
 .programs__title {
-  .heading(24px; 27px; @basic-black);
+  .heading(24px; 27px);
+  text-transform: uppercase;
   margin-top: 0;
   margin-bottom: 20px;
   padding-left: 70px;
@@ -78,7 +74,7 @@
   }
 
   @media (min-width: @tablet-width) {
-    .heading(36px; 36px; @basic-black);
+    .heading(36px; 36px);
     padding-left: 0;
     margin-bottom: 24px;
 
@@ -104,13 +100,11 @@
 }
 
 .programs__description {
-  .description(14px; 18px; @special-dark-grey);
   padding-right: 33px;
   margin-bottom: 39px;
 
 
   @media (min-width: @tablet-width) {
-    .description(16px; 24px; @special-dark-grey);
     padding-right: 0;
     margin-bottom: 48px;
   }
@@ -121,10 +115,10 @@
 }
 
 .programs__link {
+  .heading(16px; 16px);
+  text-transform: uppercase;
   display: block;
   position: relative;
-  color: @basic-black;
-
 
   &::before {
     position: absolute;
