--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -10,7 +10,7 @@
 @special-grey: #cdcdcd;
 @grey-icon: #666666;
 @grey-border: #e6e6e6;
-@grey-border-input: #160b0b;
+@grey-border-input: #e7e7e7;
 @hover-grey-border: #bababa;
 @grey-plus: #d3d3d3;
 @green: #68b738;
@@ -43,61 +43,29 @@
   }
 }
 
-.heading(@font-size; @line-height; @color) {
+.heading(@font-size; @line-height) {
   font-family: @decor-font;
   font-size: @font-size;
   line-height: @line-height;
-  color: @color;
+  color: @basic-black;
   font-weight: 400;
 }
 
-.description(@font-size; @line-height; @color) {
-  font-family: @base-font;
-  font-size: @font-size;
-  line-height: @line-height;
+.uppercase-text(@color) {
   color: @color;
-  text-transform: none;
+  text-transform: uppercase;
 }
 
 .button(@font-size: 16px) {
   display: block;
   font-family: @decor-font;
   font-size: @font-size;
+  font-weight: 400;
   line-height: 20px;
   text-align: center;
   text-transform: uppercase;
   color: @basic-white;
   background-color: @green;
-  width: 62px;
-  padding: 10px 109px;
-}
-
-.uppercase-text(@color: @basic-black) {
-  font-family: @decor-font;
-  color: @color;
-  text-transform: uppercase;
-  font-weight: 400;
-}
-
-.product-name(@font-size; @line-height) {
-  font-family: @decor-font;
-  font-size: @font-size;
-  line-height: @line-height;
-  text-transform: uppercase;
-  font-weight: 400;
-  color: @special-dark-text;
-}
-
-.product-info(@font-size; @line-height) {
-  font-family: @base-font;
-  font-size: @font-size;
-  line-height: @line-height;
-  color: @special-dark-grey;
-}
-
-.form-font(@font-size: 16px; @line-height: 18px) {
-  font-family: @decor-font;
-  font-size: @font-size;
-  line-height: @line-height;
-  text-transform: uppercase;
+  width: 280px;
+  padding: 10px;
 }
