--- a/source/less/blocks/general/address.less
+++ b/source/less/blocks/general/address.less
@@ -2,6 +2,10 @@
   &--grey-bg {
     background-color: @basic-grey;
   }
+
+  @media (min-width: @desktop-width) {
+    position: relative;
+  }
 }
 
 .address__wrapper {
@@ -9,31 +13,39 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 10px 19px;
 
   @media (min-width: @tablet-width) {
-    padding: 62px 70px 51px;
+    padding: 50px 70px 43px;
   }
 
   @media (min-width: @desktop-width) {
     width: 570px;
-    margin-top: 95px;
-    margin-left: 110px;
-    padding: 62px 76px 51px;
+    position: absolute;
+    top: 95px;
+    left: 110px;
+    padding: 45px 76px 51px;
+    color: red;
+    opacity: 1;
+    background-color: @basic-white;
+    justify-content: flex-start;
   }
 }
 
 .address__text {
-  .heading(16px; 18px);
+  .heading(16px; 21px);
   .uppercase-text(@black-text);
   width: 140px;
 
   @media (min-width: @tablet-width) {
-    .heading(20px; 21px);
+    .heading(20px; 23px);
     width: 171px;
   }
 
   @media (min-width: @desktop-width) {
+    .heading(20px; 25px);
     width: 163px;
+    margin-right: 87px;
   }
 }
 
@@ -41,15 +53,28 @@
   font-size: 14px;
   line-height: 20px;
   width: 140px;
+  margin: 0;
 
   @media (min-width: @tablet-width) {
+    font-size: 16px;
+    line-height: 24px;
     width: 159px;
     text-align: right;
+
+    &--steet {
+      margin-bottom: 10px;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    text-align: left;
+    line-height: 25px;
   }
 }
 
 .address__map {
   @media (min-width: @mobile-width) {
+    background-color: green;
     height: 362px;
   }
 
@@ -58,6 +83,6 @@
   }
 
   @media (min-width: @desktop-width) {
-    height: 184px;
+    opacity: 0.3;
   }
 }
