--- a/source/less/blocks/general/page-footer.less
+++ b/source/less/blocks/general/page-footer.less
@@ -1,39 +1,53 @@
 .page-footer {
   background-color: @basic-grey;
+  padding-bottom: 22px;
 }
 
 .page-footer__wrapper {
   .wrapper;
-  padding-bottom: 32px;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  padding-top: 24px;
 
   @media (min-width: @tablet-width) {
     flex-direction: row;
+    padding-top: 52px;
+    padding-bottom: 50px;
+  }
+
+
+  @media (min-width: @desktop-width) {
     padding-top: 55px;
-    padding-bottom: 61px;
+    padding-bottom: 35px;
   }
 }
 
 .page-footer__heading {
-  text-align: center;
-  color: @black-text;
-  text-transform: uppercase;
-  padding: 39px 0 32px;
+  background-color: @red;
+  width: 128px;
+  height: 24px;
+  margin-bottom: 32px;
 
   @media (min-width: @tablet-width) {
-    width: 128px;
     text-align: left;
-    padding: 0;
-    margin-bottom: 0;
+    margin: 0 20px 0 0;
   }
 }
 
 .page-footer__social {
+  border-top: 1px solid @grey-line;
+  border-bottom: 1px solid @grey-line;
+  width: 100%;
+  padding: 20px 0 15px;
+  margin-bottom: 22px;
+
   @media (min-width: @tablet-width) {
+    border: none;
     width: 129px;
+    padding: 0;
+    margin-bottom: 0;
   }
 }
