--- a/source/less/blocks/general/social.less
+++ b/source/less/blocks/general/social.less
@@ -6,7 +6,6 @@
   justify-content: center;
   flex-wrap: wrap;
   align-items: center;
-  margin-bottom: 22px;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 0;
@@ -22,7 +21,11 @@
   }
 
   @media (min-width: @tablet-width) {
-    margin-right: 20px;
+    margin-right: 27px;
+
+    &:nth-child(2) {
+      margin-right: 20px;
+    }
   }
 }
 
@@ -57,8 +60,8 @@
     }
 
     &--facebook {
-      width: 12px;
-      height: 26px;
+      width: 28px;
+      height: 33px;
     }
   }
 }
