--- a/source/less/blocks/index/page-main.less
+++ b/source/less/blocks/index/page-main.less
@@ -1,7 +1,8 @@
 .page-main__heading {
   background-color: @green;
   padding: 27px 0;
-  margin-bottom: 5px;
+  padding-bottom: 270px;
+  margin-bottom: 3px;
   text-align: center;
 
   @media (min-width: @tablet-width) {
@@ -9,6 +10,10 @@
     text-align: left;
     padding-bottom: 0;
     margin-bottom: 49px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 53px;
   }
 }
 
