--- a/source/less/blocks/general/copyright.less
+++ b/source/less/blocks/general/copyright.less
@@ -15,6 +15,10 @@
     background-color: @grey-icon;
   }
 
+  &:active {
+    opacity: 0.3;
+  }
+
   @media (min-width: @tablet-width) {
     width: 163px;
   }
