--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -14,6 +14,7 @@
 @hover-grey-border: #bababa;
 @grey-plus: #d3d3d3;
 @green: #68b738;
+@hover-green: #5eaa2f;
 @red: #ff8282;
 
 // fonts //
@@ -68,4 +69,14 @@
   background-color: @green;
   width: 280px;
   padding: 10px;
+
+  &:hover,
+  &:focus {
+    background-color: @hover-green;
+  }
+
+  &:active {
+    background-color: @hover-green;
+    color: rgba(255,255,255, 0.3);
+  }
 }
